# cleverlist

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: deployment.yml
caldav/: apps.py  helper.py  middleware.py  models.py  urls.py  views.py
caldav/migrations/: 0001_initial.py  0002_remove_caldavtasklist_sync_token.py
cleverlist/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
inventory/: admin.py  apps.py  models.py
inventory/migrations/: 0001_initial.py  0002_alter_location_name_alter_productstock_product_and_more.py  0002_alter_productwithstock_options_location_tags_and_more.py  0002_configuration.py  0003_alter_productstock_tags.py  0003_productstock_location.py  0003_rename_configuration_minimumproductstock_and_more.py  0004_alter_minimumproductstock_options.py  0004_alter_productstock_location.py  0005_alter_productstock_location.py  0005_productstock_description.py  0006_productstock_update_reason_productstock_updated_at.py  0006_productwithstock.py  0007_alter_productstock_description.py  0008_alter_minimumproductstock_unique_together.py  0009_productstock_uuid.py  0010_populate_productstock_uuid_values.py  0011_remove_productstock_uuid_null.py
master/: admin.py  apps.py  models.py
shopping/: admin.py  apps.py  models.py
static/css/: select2.css  (+2 more)
stock/: admin.py  models.py
templates/: list_actions.html
todo/: admin.py  apps.py  models.py
webdav/: __init__.py  addressbook.py  admin.py  apps.py  base.py  calendar.py  calendars.py  models.py  storage.py  tests.py  todo.py  wellknown.py
widgets/: __init__.py  button.py
(+52 files in other folders)
