[tool.poetry]
name = "cleverlist"
version = "0.1.0"
description = ""
authors = ["Robert Kleinschuster <github@robs.social>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
python-dotenv = "^1.0.1"
lxml = "^5.3.0"
icalendar = "^5.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
